[package]
name = "svn-cmd"
version = "0.1.0"
authors = ["Rajat Rajput <rajputrajat@gmail.com>"]
description = "this is a wrapper to svn command-line utility"
repository = "https://github.com/rajputrajat/svn-cmd.git"
license = "MIT"
edition = "2021"

[dependencies]
log = "^0.4"
thiserror = "^1"
serde-xml-rs = "^0.5"
serde = { version = "^1.0", features = ["derive"] }
which = "^4.2"
semver = "^1.0"
regex = "^1.5"
url = "2.2.2"
simple-broadcaster = { git = "https://github.com/rajputrajat/simple-broadcaster"}

[dev-dependencies]
env_logger = "^0.8"
bugsalot = "0.2.2"

[[example]]
name = "xml_parsing"
required-features = ["attach_debugger"]

[features]
attach_debugger = []
