[package]
name = "svn-cmd"
version = "0.1.0"
authors = ["Rajat Rajput <rajputrajat@gmail.com>"]
description = "this is a wrapper to svn command-line utility"
repository = "https://github.com/rajputrajat/svn-cmd.git"
license = "MIT"
edition = "2021"

[dependencies]
log = "^0.4"
thiserror = "1"
serde-xml-rs = "^0.5"
serde = { version = "1", features = ["derive"] }
which = "4"
semver = "1"
regex = "1"
url = "2"
simple-broadcaster = { git = "https://github.com/rajputrajat/simple-broadcaster" }
managed-command = { git = "https://github.com/rajputrajat/managed-command" }
rr-common-utils = { git = "https://github.com/rajputrajat/rr-common-utils" }

[dev-dependencies]
env_logger = "^0.8"
bugsalot = "0.2"

[[example]]
name = "xml_parsing"
required-features = ["attach_debugger"]

[features]
attach_debugger = []
